--- a/index.html
+++ b/index.html
@@ -119,29 +119,39 @@
                 <!-- portofolio 1 -->
                 <div class="portofolio">
                     <div class="portofolio-cover">
-                        <img src="./images/portofolios/figure1.jpg" alt="Portofolio 1">
+                        <img src="./images/portofolios/figure4.jpg" alt="Portofolio 1">
                     </div>
 
                     <div class="portofolio-info">
                         <div class="portofolio-title">
-                            <h4>Scraping Data</h4>
-                            <a href="/" class="portofolio-link">
+                            <h4>Machine Learning</h4>
+                            <a href="https://github.com/Reyyzzz24/Machine-Learning" class="portofolio-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path
                                         d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z" />
                                 </svg>
                             </a>
                         </div>
-                        <div class="portofolio-tags">
-                            <div>React</div>
-                            <div>TallWind</div>
+                        <div class="portofolio-tags-wrapper">
+                            <div class="portofolio-tags d-flex overflow-auto flex-nowrap">
+                                <div class="tag-item p-2">Machine Learning</div>
+                                <div class="tag-item p-2">Data Science</div>
+                                <div class="tag-item p-2">Deep Learning</div>
+                                <div class="tag-item p-2">Neural Networks</div>
+                                <div class="tag-item p-2">AI</div>
+                                <div class="tag-item p-2">Robotics</div>
+                                <div class="tag-item p-2">TensorFlow</div>
+                                <div class="tag-item p-2">PyTorch</div>
+                                <div class="tag-item p-2">Scikit-Learn</div>
+                            </div>
                         </div>
+
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            These are some of the machine learning projects I worked on during my time at university.
+                            Throughout my studies, I had the opportunity to explore various machine learning techniques
+                            and apply them to real-world problems. Each project allowed me to deepen my understanding of
+                            data analysis, model building, and algorithm optimization, and provided hands-on experience
+                            in solving complex challenges using machine learning methods.
                         </p>
                     </div>
                 </div>
@@ -153,7 +163,7 @@
 
                     <div class="portofolio-info">
                         <div class="portofolio-title">
-                            <h4>Web Database</h4>
+                            <h4>Websites Projects</h4>
                             <a href="/" class="portofolio-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path
@@ -161,28 +171,37 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="portofolio-tags">
-                            <div>Vue</div>
-                            <div>Contentful</div>
+                        <div class="portofolio-tags-wrapper">
+                            <div class="portofolio-tags d-flex overflow-auto flex-nowrap">
+                                <div class="tag-item p-2">Web Development</div>
+                                <div class="tag-item p-2">Front End</div>
+                                <div class="tag-item p-2">Back End</div>
+                                <div class="tag-item p-2">UI/UX</div>
+                                <div class="tag-item p-2">Graphic Design</div>
+                                <div class="tag-item p-2">Mobile App</div>
+                                <div class="tag-item p-2">Digital Marketing</div>
+                            </div>
                         </div>
+
+
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            These are some of the web projects I have worked on. Throughout these projects, I have
+                            gained experience in developing and deploying web applications, utilizing various
+                            technologies and frameworks to create dynamic, user-friendly websites. Each project reflects
+                            my skills in web design, front-end and back-end development, as well as ensuring optimal
+                            performance and security.
                         </p>
                     </div>
                 </div>
                 <!-- portofolio 3 -->
                 <div class="portofolio">
                     <div class="portofolio-cover">
-                        <img src="./images/portofolios/figure3.jpg" alt="Portofolio 1">
+                        <img src="./images/portofolios/figure6.jpg" alt="Portofolio 1">
                     </div>
 
                     <div class="portofolio-info">
                         <div class="portofolio-title">
-                            <h4>Motion Graphic</h4>
+                            <h4>Video Editing</h4>
                             <a href="/" class="portofolio-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path
@@ -190,16 +209,23 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="portofolio-tags">
-                            <div>React</div>
-                            <div>Materialize</div>
+                        <div class="portofolio-tags-wrapper">
+                            <div class="portofolio-tags d-flex overflow-auto flex-nowrap">
+                                <div class="tag-item p-2">Video Editing</div>
+                                <div class="tag-item p-2">Premiere Pro</div>
+                                <div class="tag-item p-2">After Effects</div>
+                                <div class="tag-item p-2">Image Manipulation</div>
+                                <div class="tag-item p-2">Motion Graphics</div>
+                                <div class="tag-item p-2">3D Modeling</div>
+                                <div class="tag-item p-2">VFX</div>
+                            </div>
                         </div>
+
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            These are some of the video projects I’ve created, ranging from cinematic films, motion
+                            graphics, animations and AMV (Anime Music Video). Each project showcases my skills in
+                            video production, editing, and animation, allowing me to explore different styles and
+                            techniques to deliver engaging visual content.
                         </p>
                     </div>
                 </div>
