--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li>
-                            <a href="resume.pdf" target="_blank">
+                            <div class="dropdown">
                                 <button class="btn">Resume</button>
-                            </a>
+                                <div class="dropdown-content">
+                                    <a href="resume-id.pdf" target="_blank">Resume Indonesia</a>
+                                    <a href="resume-en.pdf" target="_blank">Resume English</a>
+                                </div>
+                            </div>
                         </li>
                     </ul>
                 </nav>
@@ -63,7 +67,7 @@
         <div class="services main-container">
             <h3 class="pre-title">Services</h3>
             <h1 class="section-title services-title">Specialized In</h1>
-            <div class="grid-3"> <!-- Hanya satu grid-3 di sini -->
+            <div class="grid-3-services"> <!-- Hanya satu grid-3 di sini -->
                 <!-- service 1 -->
                 <div class="service">
                     <div class="service-icon">
@@ -147,23 +151,21 @@
                         </div>
 
                         <p>
-                            These are some of the machine learning projects I worked on during my time at university.
-                            Throughout my studies, I had the opportunity to explore various machine learning techniques
-                            and apply them to real-world problems. Each project allowed me to deepen my understanding of
-                            data analysis, model building, and algorithm optimization, and provided hands-on experience
-                            in solving complex challenges using machine learning methods.
+                            These are some machine learning projects I worked on at university, applying various
+                            techniques to real-world problems and gaining hands-on experience in data analysis, model
+                            building, and algorithm optimization.
                         </p>
                     </div>
                 </div>
                 <!-- portofolio 2 -->
                 <div class="portofolio">
                     <div class="portofolio-cover">
-                        <img src="./images/portofolios/figure2.jpg" alt="Portofolio 1">
+                        <img src="./images/portofolios/figure2.jpg" alt="Portofolio 2">
                     </div>
 
                     <div class="portofolio-info">
                         <div class="portofolio-title">
-                            <h4>Websites Projects</h4>
+                            <h4>Web & Mobile Apps</h4>
                             <a href="/" class="portofolio-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path
@@ -185,24 +187,22 @@
 
 
                         <p>
-                            These are some of the web projects I have worked on. Throughout these projects, I have
-                            gained experience in developing and deploying web applications, utilizing various
-                            technologies and frameworks to create dynamic, user-friendly websites. Each project reflects
-                            my skills in web design, front-end and back-end development, as well as ensuring optimal
-                            performance and security.
+                            These are some web projects I’ve worked on, where I developed and deployed dynamic
+                            applications using various technologies, focusing on performance, security, and
+                            user-friendly design.
                         </p>
                     </div>
                 </div>
                 <!-- portofolio 3 -->
                 <div class="portofolio">
                     <div class="portofolio-cover">
-                        <img src="./images/portofolios/figure6.jpg" alt="Portofolio 1">
+                        <img src="./images/portofolios/figure6.jpg" alt="Portofolio 3">
                     </div>
 
                     <div class="portofolio-info">
                         <div class="portofolio-title">
                             <h4>Video Editing</h4>
-                            <a href="/" class="portofolio-link">
+                            <a href="portfolio-video.html" class="portofolio-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path
                                         d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z" />
@@ -222,11 +222,79 @@
                         </div>
 
                         <p>
-                            These are some of the video projects I’ve created, ranging from cinematic films, motion
-                            graphics, animations and AMV (Anime Music Video). Each project showcases my skills in
-                            video production, editing, and animation, allowing me to explore different styles and
-                            techniques to deliver engaging visual content.
+                            These are some video projects I’ve created, including cinematic films, motion graphics,
+                            animations, and AMVs, showcasing my skills in editing, animation, and visual storytelling.
                         </p>
+                    </div>
+                </div>
+                <!-- portofolio 4 -->
+                <div class="portofolio">
+                    <div class="portofolio-cover">
+                        <img src="./images/portofolios/figure7.webp" alt="Portofolio 4">
+                    </div>
+
+                    <div class="portofolio-info">
+                        <div class="portofolio-title">
+                            <h4>Game Project</h4>
+                            <a href="https://github.com/Reyyzzz24/Game-Project" class="portofolio-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                    <path
+                                        d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z" />
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="portofolio-tags-wrapper">
+                            <div class="portofolio-tags d-flex overflow-auto flex-nowrap">
+                                <div class="tag-item p-2">Game Development</div>
+                                <div class="tag-item p-2">Unity</div>
+                                <div class="tag-item p-2">Unreal Engine</div>
+                                <div class="tag-item p-2">C#</div>
+                                <div class="tag-item p-2">Game Design</div>
+                                <div class="tag-item p-2">AI in Games</div>
+                                <div class="tag-item p-2">Multiplayer</div>
+                                <div class="tag-item p-2">Physics Engine</div>
+                            </div>
+                        </div>
+
+                        <p>
+                            These are some pixel game projects I’ve worked on using GameMaker and GML, focusing on 2D
+                            mechanics, AI, and interactive gameplay with pixel art animation.
+                        </p>
+                    </div>
+                </div>
+                <!-- portofolio 5 -->
+                <div class="portofolio">
+                    <div class="portofolio-cover">
+                        <img src="./images/portofolios/figure8.jpg" alt="Portofolio 5">
+                    </div>
+
+                    <div class="portofolio-info">
+                        <div class="portofolio-title">
+                            <h4>Desain & Photography</h4>
+                            <a href="design&photography.html" class="portofolio-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                    <path
+                                        d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z" />
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="portofolio-tags-wrapper">
+                            <div class="portofolio-tags d-flex overflow-auto flex-nowrap">
+                                <div class="tag-item p-2">Graphic Design</div>
+                                <div class="tag-item p-2">Photography</div>
+                                <div class="tag-item p-2">Photo Editing</div>
+                                <div class="tag-item p-2">Adobe Photoshop</div>
+                                <div class="tag-item p-2">Adobe Illustrator</div>
+                                <div class="tag-item p-2">Branding</div>
+                                <div class="tag-item p-2">Typography</div>
+                                <div class="tag-item p-2">Visual Storytelling</div>
+                            </div>
+                        </div>
+                        
+                        <p>
+                            These are some of my design and photography projects, where I explored visual composition, branding, 
+                            and creative storytelling through graphics and photography.
+                        </p>                        
                     </div>
                 </div>
             </div>
