--- a/design&photography.html
+++ b/design&photography.html
@@ -16,7 +16,7 @@
                 <!-- Design 1 -->
                 <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design1.png" alt="Design 1" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927219082.jpg" alt="Design 1" class="design-thumbnail">
                     </div>
                     <h4>Minimalist Poster</h4>
                     <p>A modern minimalist poster design with clean typography.</p>
@@ -24,7 +24,7 @@
                 <!-- Design 2 -->
                 <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design2.png" alt="Design 2" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927218274.jpg" alt="Design 2" class="design-thumbnail">
                     </div>
                     <h4>Social Media Banner</h4>
                     <p>A vibrant social media banner designed for promotional content.</p>
@@ -32,7 +32,7 @@
                 <!-- Design 3 -->
                 <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design3.png" alt="Design 3" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927219888.jpg" alt="Design 3" class="design-thumbnail">
                     </div>
                     <h4>Product Packaging</h4>
                     <p>A sleek product packaging concept emphasizing brand identity.</p>
@@ -40,7 +40,7 @@
                 <!-- Design 4 -->
                 <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design4.png" alt="Design 4" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927226326.jpg" alt="Design 4" class="design-thumbnail">
                     </div>
                     <h4>Typography Experiment</h4>
                     <p>An artistic typography design exploring creative letterforms.</p>
@@ -48,7 +48,7 @@
                 <!-- Design 5 -->
                 <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design5.png" alt="Design 5" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927228041.jpg" alt="Design 5" class="design-thumbnail">
                     </div>
                     <h4>UI/UX Concept</h4>
                     <p>A user interface and experience design for a mobile app.</p>
@@ -56,7 +56,7 @@
                 <!-- Design 6 -->
                 <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design6.png" alt="Design 6" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927228934.jpg" alt="Design 6" class="design-thumbnail">
                     </div>
                     <h4>Brand Identity</h4>
                     <p>A cohesive brand identity design including logo and branding elements.</p>
@@ -64,7 +64,7 @@
                 <!-- Design 7 -->
                 <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design7.png" alt="Design 7" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927220691.jpg" alt="Design 7" class="design-thumbnail">
                     </div>
                     <h4>Business Card</h4>
                     <p>A professional business card layout with modern aesthetics.</p>
@@ -72,7 +72,7 @@
                 <!-- Design 8 -->
                 <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design8.png" alt="Design 8" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927227210.jpg" alt="Design 8" class="design-thumbnail">
                     </div>
                     <h4>Infographic</h4>
                     <p>A visually engaging infographic with clear data representation.</p>
@@ -80,7 +80,7 @@
                 <!-- Design 9 -->
                 <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design9.png" alt="Design 9" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927222290.jpg" alt="Design 9" class="design-thumbnail">
                     </div>
                     <h4>Magazine Cover</h4>
                     <p>A bold and stylish magazine cover layout.</p>
@@ -88,7 +88,7 @@
                 <!-- Design 10 -->
                 <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design10.png" alt="Design 10" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927261624.jpg" alt="Design 10" class="design-thumbnail">
                     </div>
                     <h4>Nature Layout</h4>
                     <p>A visually refreshing design inspired by the beauty of nature and sustainability.</p>
@@ -96,7 +96,7 @@
                  <!-- Design 11 -->
                  <div class="service">
                     <div class="design-container">
-                        <img src="images/design/design11.jpg" alt="Design 10" class="design-thumbnail">
+                        <img src="https://ar-hosting.pages.dev/1740927867946.jpg" alt="Design 10" class="design-thumbnail">
                     </div>
                     <h4>Movie Poster</h4>
                     <p>A modern movie poster layout with expressive brush textures, adding depth and intensity to the composition.</p>
@@ -111,19 +111,75 @@
             <h3 class="pre-title">MY</h3>
             <h1 class="section-title services-title">Photography</h1>
             <div class="grid-5-photography">
-                <!-- Loop untuk 22 gambar -->
-                <script>
-                    for (let i = 1; i <= 22; i++) {
-                        document.write(`
-                            <div class="photo-item">
-                                <img src="images/photography/photo${i}.jpg" alt="Photography ${i}" class="photo-thumbnail">
-                            </div>
-                        `);
-                    }
-                </script>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928494502.jpg" alt="Photography 1" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928492475.jpg" alt="Photography 2" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928490612.jpg" alt="Photography 3" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928491516.jpg" alt="Photography 4" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928493501.jpg" alt="Photography 5" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928500844.jpg" alt="Photography 6" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928498814.jpg" alt="Photography 7" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928499757.jpg" alt="Photography 8" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928501839.jpg" alt="Photography 9" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928502748.jpg" alt="Photography 10" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928503648.jpg" alt="Photography 11" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928504579.jpg" alt="Photography 12" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928512036.jpg" alt="Photography 13" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928507699.jpg" alt="Photography 14" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928506572.jpg" alt="Photography 15" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740928505481.jpg" alt="Photography 16" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740929511965.jpg" alt="Photography 17" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740929512766.jpg" alt="Photography 18" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740929514184.jpg" alt="Photography 19" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740929450951.jpg" alt="Photography 20" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740929450046.jpg" alt="Photography 21" class="photo-thumbnail">
+                </div>
+                <div class="photo-item">
+                    <img src="https://ar-hosting.pages.dev/1740929452956.jpg" alt="Photography 22" class="photo-thumbnail">
+                </div>
             </div>
         </div>
-    </section>
+    </section>    
     <!-- Footer -->
     <footer>
         <div class="footer-icons">
