--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
                     <div class="portofolio-info">
                         <div class="portofolio-title">
-                            <h4>Web & Mobile Apps</h4>
+                            <h4>Web & Mobile App</h4>
                             <a href="/" class="portofolio-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path
@@ -187,9 +187,9 @@
 
 
                         <p>
-                            These are some web projects I’ve worked on, where I developed and deployed dynamic
-                            applications using various technologies, focusing on performance, security, and
-                            user-friendly design.
+                            These are some web and mobile app projects I’ve worked on, where I developed and
+                            deployed dynamic applications using various technologies, focusing on performance, security,
+                            and user-friendly design.
                         </p>
                     </div>
                 </div>
@@ -290,17 +290,17 @@
                                 <div class="tag-item p-2">Visual Storytelling</div>
                             </div>
                         </div>
-                        
-                        <p>
-                            These are some of my design and photography projects, where I explored visual composition, branding, 
-                            and creative storytelling through graphics and photography.
-                        </p>                        
+
+                        <p> These are some of my design and photography projects, where I explored visual composition,
+                            branding, and creative storytelling through graphics and photography. </p>
                     </div>
                 </div>
             </div>
+            <div class="dot-navigation"></div>
         </div>
     </section>
     <!-- End of Portofolio -->
+
 
     <!-- Skills & Education -->
     <section id="skills">
