--- a/design&photography.html
+++ b/design&photography.html
@@ -8,6 +8,46 @@
     <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
+    <header>
+        <div class="main-container">
+            <div class="nav">
+                <div class="logo">
+                    <a href="/">RY</a>
+                </div>
+
+                <nav>
+                    <ul>                        
+                        <li><a href="index.html#services">Services</a></li>
+                        <li><a href="index.html#portofolios">Portofolio</a></li>
+                        <li><a href="index.html#skills">Skills</a></li>
+                        <li><a href="index.html#contact">Contact</a></li>
+                        <li>
+                            <button id="themeToggle" class="btn">
+                                <img id="themeIcon" src="images/icons/dark.svg" alt="Theme Icon" width="24">
+                            </button>
+                        </li>                        
+                        <li>
+                            <div class="dropdown">
+                                <button class="btn">Resume</button>
+                                <div class="dropdown-content">
+                                    <a href="resume-id.pdf" target="_blank">Resume Indonesia</a>
+                                    <a href="resume-en.pdf" target="_blank">Resume English</a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+
+
+                <div class="burger">
+                    <div class="line-1"></div>
+                    <div class="line-2"></div>
+                    <div class="line-3"></div>
+                </div>
+            </div>
+        </div>
+
+    </header>
     <section id="services">
         <div class="services main-container">
             <h3 class="pre-title">MY</h3>
@@ -107,7 +147,7 @@
 
     <!-- Section Photography -->
     <section id="photography">
-        <div class="services main-container" style="padding-top: 20px;">
+        <div class="services main-container" style="padding-top: 50px;">
             <h3 class="pre-title">MY</h3>
             <h1 class="section-title services-title">Photography</h1>
             <div class="grid-5-photography">
