--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
                 </div>
 
                 <nav>
-                    <ul>
+                    <ul>                        
                         <li><a href="#services">Services</a></li>
                         <li><a href="#portofolios">Portofolio</a></li>
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li>
+                            <button id="themeToggle" class="btn">
+                                <img id="themeIcon" src="images/icons/dark.svg" alt="Theme Icon" width="24">
+                            </button>
+                        </li>                        
                         <li>
                             <div class="dropdown">
                                 <button class="btn">Resume</button>
