--- a/portfolio-video.html
+++ b/portfolio-video.html
@@ -90,7 +90,7 @@
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail1.png" alt="UKM Karate Content" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/1jm1KSMtliL4A9wJmQXVnQy9lg-rEuMW3/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/1jm1KSMtliL4A9wJmQXVnQy9lg-rEuMW3/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                     <h4>UKM Karate Content</h4>
                     <p>This is a documentation video of a UKM Karate event.</p>
@@ -99,7 +99,7 @@
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail2.png" alt="Cinematic Video" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/1Cujb8vd5dHI3ynjFuF_ZRjT6rePwOa09/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/1Cujb8vd5dHI3ynjFuF_ZRjT6rePwOa09/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                     <h4>Cinematic Video</h4>
                     <p>This is a Cinematic Video that I created using After Effects.</p>
@@ -108,7 +108,7 @@
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail3.png" alt="Minecraft Animation" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/1joCkFfa3dzLoQSkofbXBpVaQfujOcVgm/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/1joCkFfa3dzLoQSkofbXBpVaQfujOcVgm/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                     <h4>Minecraft Animation</h4>
                     <p>This is a Minecraft animation project that I edited using Mine-imator and After Effects.</p>
@@ -126,49 +126,49 @@
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail4.png" alt="AMV" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/12-JALjQNZWpl02tMMGUOy7OB_G4ptoyT/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/12-JALjQNZWpl02tMMGUOy7OB_G4ptoyT/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                 </div>
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail5.png" alt="AMV" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/1uDSScmdSolXvb5q1zwhH65O6-sz_Aixy/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/1uDSScmdSolXvb5q1zwhH65O6-sz_Aixy/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                 </div>
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail6.png" alt="AMV" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/1eFctxpAOh1GjSIkN-KXkD-zNy9Y5kqMT/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/1eFctxpAOh1GjSIkN-KXkD-zNy9Y5kqMT/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                 </div>
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail7.jpeg" alt="AMV" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/1kXyYkukJwLsdP2atjPQgzbrRmfYw6CTM/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/1kXyYkukJwLsdP2atjPQgzbrRmfYw6CTM/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                 </div>
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail8.jpeg" alt="AMV" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/1kPPC9EIS7bWI6SknklBV7b1dJoolrPR3/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/1kPPC9EIS7bWI6SknklBV7b1dJoolrPR3/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                 </div>
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail9.jpeg" alt="AMV" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/1k9QwRyZG9KtqUr0SUfCA_Gyh4Dk2ZHRd/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/1k9QwRyZG9KtqUr0SUfCA_Gyh4Dk2ZHRd/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                 </div>
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail10.png" alt="AMV" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/1qYEVMxMY5H7WXnjmEKcTsMvDi-gasiTC/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/1qYEVMxMY5H7WXnjmEKcTsMvDi-gasiTC/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                 </div>
                 <div class="service">
                     <div class="video-container" onclick="playVideo(this)">
                         <img src="images/thumbnails/thumbnail11.jpeg" alt="AMV" class="thumbnail">
-                        <iframe data-src="https://drive.google.com/file/d/1km7NxVLbzPWDPvefGlEFiWgIVMZIBJ4Q/preview" allow="autoplay"></iframe>
+                        <iframe data-src="https://drive.google.com/file/d/1km7NxVLbzPWDPvefGlEFiWgIVMZIBJ4Q/preview" allow="autoplay; fullscreen"></iframe>
                     </div>
                 </div>
             </div>
