--- a/portfolio-video.html
+++ b/portfolio-video.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Video Editing</title>
-    <link rel="stylesheet" href="style.css">
+    <title>PortofolioEditing</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link ke file CSS -->
     <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
@@ -51,36 +50,6 @@
 
     </header>
 
-
-    <div class="burger">
-        <div class="line-1"></div>
-        <div class="line-2"></div>
-        <div class="line-3"></div>
-    </div>
-    <!-- <div class="services main-container" style="padding-top: 20px;">
-        <h3 class="pre-title">MY</h3>
-        <h1 class="section-title services-title">Video Editing</h1>
-    </div>
-    <div class="portfolio-container">
-        <div class="portfolio-item">
-            <iframe src="https://drive.google.com/file/d/1k6D5FLf_VdIM28GlCby2xXv49_GWxmwj/preview"
-                allow="autoplay"></iframe>
-            <h4 style="padding: 10px;">2D Animation</h4>
-            <p>This is a 2D animation that I created using After Effects.</p>
-        </div>
-        <div class="portfolio-item">
-            <iframe src="https://drive.google.com/file/d/1jm1KSMtliL4A9wJmQXVnQy9lg-rEuMW3/preview"
-                allow="autoplay"></iframe>
-            <h4 style="padding: 10px;">UKM Karate Content</h4>
-            <p>This is a documentation video of a UKM Karate event.</p>
-        </div>
-        <div class="portfolio-item">
-            <iframe src="https://drive.google.com/file/d/1joCkFfa3dzLoQSkofbXBpVaQfujOcVgm/preview"
-                allow="autoplay"></iframe>
-            <h4 style="padding: 10px;">Minecraft Animation</h4>
-            <p>This is a Minecraft animation project that I edited using Mine-imator and After Effects.</p>
-        </div>
-    </div> -->
     <section id="services">
         <div class="services main-container">
             <h3 class="pre-title">MY</h3>
@@ -116,7 +85,7 @@
             </div>
         </div>
     </section>
-    
+
     <section>
         <div class="services main-container" style="padding-top: 50px;">
             <h3 class="pre-title">AND</h3>
@@ -206,7 +175,6 @@
         <p>&#169; 2024 ᴍᴀᴅᴇ ʙʏ ʀᴇᴠᴀ ʏᴜʟɪᴀɴ sᴀᴛʀɪᴀ</p>
     </footer>
     <!-- End of Footer -->
-
     <script>
         function playVideo(container) {
             let thumbnail = container.querySelector('.thumbnail');
@@ -219,9 +187,6 @@
             }
         }
     </script>
-
-    <script src="scripts/main.js"></script>
-
+    <script src="scripts/main.js"></script>    
 </body>
-
 </html>
