--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
         </div>
     </section>
     <!-- End of Contact -->
+    <!-- End of Contact -->
     <!-- Footer -->
     <footer>
         <div class="footer-icons">
