--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                         </div>
                         <div class="education-info">
                             <h4 class="education-title">SMK Amaliah 1 Ciawi</h4>
-                            <p>Vocational High School - Computer & Network Engineering</p>
+                            <p>Vocational High School - Computer & <br> Engineering</p>
                             <h4 class="education-years">2018 - 2022</h4>
                         </div>
                     </div>
@@ -350,11 +350,9 @@
                 <!-- Right Column (Skills) -->
                 <div class="skills-right">
                     <p>
-                        Over the past five years, I have learned and developed a wide range of skills, starting with
-                        both
-                        front-end and back-end development. This journey has equipped me with valuable expertise in
-                        various
-                        technologies. The skills I have acquired include:
+                        Over the past five years, I have learned and <br> developed a wide range of skills, starting with
+                        both front-end and back-end development. This journey <br> has equipped me with valuable expertise in
+                        various technologies. The skills I have acquired include:
                     </p>
                     <div class="skills-list">
                         <ul>
@@ -441,7 +439,6 @@
             </div>
         </div>
     </section>
-    <!-- End of Contact -->
     <!-- End of Contact -->
     <!-- Footer -->
     <footer>
